scroll + chart cdn + block js

--- a/campaign/templates/app/campaign/dashboard.html
+++ b/campaign/templates/app/campaign/dashboard.html
@@ -2,6 +2,12 @@
 
 {% block title %}Campaign Dashboard{% endblock %}
 
+{% block js %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock %}
+
+
+
 {% block cmp-base-content %}
 
 <style>
