--- a/campaign/templates/app/overall-dashboard.html
+++ b/campaign/templates/app/overall-dashboard.html
@@ -2,6 +2,13 @@
 
 {% block title %}Email Marketing Dashboard{% endblock %}
 
+
+{% block js %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock %}
+
+
+
 {% block content %}
 <div class="p-6 md:p-8">
     <!-- Header Section -->
