--- a/campaign/templates/base-app.html
+++ b/campaign/templates/base-app.html
@@ -16,7 +16,7 @@
       
       
       <!-- Content -->
-      <main class="flex-1 main-content-bg pl-[100px] pr-[100px]">
+      <main class="flex-1 main-content-bg pl-[100px] pr-[100px] overflow-y-auto"> 
         {% block content %}{% endblock %}
         <!-- The main content is empty as per the screenshot -->
       </main>
