--- a/campaign/templates/components/nav.html
+++ b/campaign/templates/components/nav.html
@@ -31,7 +31,7 @@
         <!-- Leads -->
         <li>
           <div class="tooltip tooltip-right" data-tip="Leads">
-            <a href="{% url 'leads_view' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
+            <a href="{% url 'leads_lists' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
               <i class="fa-solid fa-users text-l"></i>
             </a>
           </div>
